--- a/Create_protokol/app/src/main/res/layout/activity_insulation.xml
+++ b/Create_protokol/app/src/main/res/layout/activity_insulation.xml
@@ -21,21 +21,21 @@
         android:text="Список комнат:"
         android:textColor="@color/text"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/lines"
+        app:layout_constraintBottom_toTopOf="@+id/groups"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
-        android:id="@+id/lines"
+        android:id="@+id/groups"
         android:layout_width="350dp"
         android:layout_height="382dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="5dp"
         app:layout_constraintBottom_toTopOf="@+id/button9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -48,7 +48,6 @@
         android:layout_height="50dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="8dp"
@@ -59,7 +58,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lines" />
+        app:layout_constraintTop_toBottomOf="@+id/groups" />
 
     <Button
         android:id="@+id/button8"
