--- a/Create_protokol/app/src/main/res/layout/activity_insulation.xml
+++ b/Create_protokol/app/src/main/res/layout/activity_insulation.xml
@@ -21,14 +21,14 @@
         android:text="Список комнат:"
         android:textColor="@color/text"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/groups"
+        app:layout_constraintBottom_toTopOf="@+id/rooms"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
-        android:id="@+id/groups"
+        android:id="@+id/rooms"
         android:layout_width="350dp"
         android:layout_height="382dp"
         android:layout_marginStart="16dp"
@@ -58,7 +58,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/groups" />
+        app:layout_constraintTop_toBottomOf="@+id/rooms" />
 
     <Button
         android:id="@+id/button8"
