--- a/Create_protokol/app/src/main/res/layout/activity_insulation2.xml
+++ b/Create_protokol/app/src/main/res/layout/activity_insulation2.xml
@@ -39,14 +39,14 @@
         android:text="Список щитов:"
         android:textColor="@color/text"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/groups"
+        app:layout_constraintBottom_toTopOf="@+id/lines"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <ListView
-        android:id="@+id/groups"
+        android:id="@+id/lines"
         android:layout_width="350dp"
         android:layout_height="339dp"
         android:layout_marginStart="16dp"
@@ -76,7 +76,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/groups" />
+        app:layout_constraintTop_toBottomOf="@+id/lines" />
 
     <Button
         android:id="@+id/button8"
