--- a/Create_protokol/app/src/main/res/layout/activity_insulation3.xml
+++ b/Create_protokol/app/src/main/res/layout/activity_insulation3.xml
@@ -90,8 +90,8 @@
         android:layout_width="350dp"
         android:layout_height="50dp"
         android:layout_marginBottom="24dp"
-        android:background="@color/textbutton"
-        android:text="Создать PDF"
+        android:background="#708ea9"
+        android:text="Повторить группу"
         android:textColor="@color/fon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
