--- a/Create_protokol/app/src/main/res/layout/activity_insulation4.xml
+++ b/Create_protokol/app/src/main/res/layout/activity_insulation4.xml
@@ -5,15 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/fon"
-    tools:context=".InsulationActivity4">
+    tools:context=".InsulationActivity4"
+    tools:layout_editor_absoluteY="25dp">
 
     <ScrollView
         android:id="@+id/scroll"
         android:layout_width="368dp"
-        android:layout_height="551dp"
+        android:layout_height="450dp"
         android:layout_marginTop="24dp"
-        android:layout_marginBottom="24dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/button17"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -215,7 +216,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Фаза: Не выбрана"
+                android:text="Сопротивление: 0,5"
                 android:textColor="@color/text"
                 android:textSize="18sp" />
 
@@ -226,11 +227,42 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="5dp"
                 android:background="#708ea9"
+                android:text="Выбрать сопротивление"
+                android:textColor="@color/fon" />
+
+            <View
+                android:id="@+id/view6"
+                android:layout_width="300dp"
+                android:layout_height="1dp"
+                android:layout_marginStart="42dp"
+                android:layout_marginLeft="42dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="42dp"
+                android:layout_marginRight="42dp"
+                android:layout_marginBottom="20dp"
+                android:background="@color/text" />
+
+            <TextView
+                android:id="@+id/textView18"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Фаза: Не выбрана"
+                android:textColor="@color/text"
+                android:textSize="18sp" />
+
+            <Button
+                android:id="@+id/button16"
+                android:layout_width="350dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:background="#708ea9"
                 android:text="Выбрать фазу"
                 android:textColor="@color/fon" />
 
             <TextView
-                android:id="@+id/textView18"
+                android:id="@+id/textView19"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
@@ -246,20 +278,27 @@
                 android:layout_gravity="center"
                 android:ems="10"
                 android:gravity="center"
-                android:inputType="number"
+                android:inputType="numberDecimal"
+                android:digits="0123456789,"
                 android:textColor="@color/text" />
 
-            <Button
-                android:id="@+id/button16"
-                android:layout_width="350dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="5dp"
-                android:background="@color/textbutton"
-                android:text="Cохранить"
-                android:textColor="@color/fon" />
 
         </LinearLayout>
     </ScrollView>
+
+    <Button
+        android:id="@+id/button17"
+        android:layout_width="350dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:layout_marginBottom="24dp"
+        android:background="@color/textbutton"
+        android:text="Cохранить"
+        android:textColor="@color/fon"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scroll" />
 
 </android.support.constraint.ConstraintLayout>
